# localkit-docs

./: .gitignore  README.md  package.json  run-dev.ps1
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/skills/localkit-docs/: SKILL.md
backend/skills/localkit-docs-add/: SKILL.md
backend/skills/localkit-docs-search/: SKILL.md
backend/src/api/: app.py  schemas.py
backend/src/cli/: app.py
backend/src/core/: config.py  factory.py  ids.py  indexer.py  progress.py  search.py  services.py  sources.py  urls.py
backend/src/ingest/: chunking.py  cleaning.py  crawler.py  files.py
backend/src/storage/: database.py  embeddings.py  repositories.py  vector_store.py
backend/tests/: test_chunking.py  test_cleaning.py  test_cli_helpers.py  test_config.py  test_crawler_options.py  test_dev_launcher.py  test_embeddings.py  test_files.py  test_indexer.py  test_repositories.py  test_search.py  test_urls.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx  config.ts  index.css  types.ts
frontend/src/api/: docsApi.ts
frontend/src/components/: MainPanel.module.css  MainPanel.tsx  ProgressPanel.module.css  ProgressPanel.tsx  Sidebar.module.css  Sidebar.tsx  controls.module.css
frontend/src/components/main/: DocumentList.tsx  Preview.tsx  ResultList.tsx  SettingsPanel.tsx  SourceList.tsx  Topbar.tsx
frontend/src/components/sidebar/: Brand.tsx  (+3 more)
frontend/src/hooks/: useOperationProgress.ts
frontend/src/utils/: classNames.ts  documentDisplay.ts  folderFiles.ts  operations.ts
scripts/: dev.mjs
