[project]
name = "localkit-docs"
version = "0.1.0"
description = "Local-first documentation indexing and semantic search for agents and humans."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "chromadb>=0.5.23",
  "crawl4ai>=0.8.6",
  "fastapi[standard]>=0.115.6",
  "httpx>=0.28.1",
  "markdownify>=0.14.1",
  "pydantic>=2.10.4",
  "python-multipart>=0.0.20",
  "sqlmodel>=0.0.22",
  "typer>=0.15.1",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.8.4",
]

[project.scripts]
localkit = "cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/cli", "src/core", "src/ingest", "src/storage"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
